Changed hover setting using @media (hover: hover) to dis/enable hover on specific devices; changed z-index of nav links to ensure visibility of hover

--- a/base/_typography.scss
+++ b/base/_typography.scss
@@ -52,16 +52,18 @@ a:active {
     font-size: 2.25em;
   }
 
-  .nav__link:hover {
-    color: $color-secondary;
-    text-decoration: none;
-  }
-
   .section-title {
     font-size: 4em;
   }
 
   .contact__text {
     text-align: left;
+  }
+}
+
+@media (hover: hover) {
+  .nav__link:hover {
+    color: $color-secondary;
+    text-decoration: none;
   }
 }
