--- a/components/_buttons.scss
+++ b/components/_buttons.scss
@@ -11,17 +11,17 @@
   width: 100%;
 }
 
-/*.btn:hover {
-  color: $color-primary;
-}*/
-
 .btn:hover {
+  color: $color-primary;
+}
+
+/*.btn:hover {
   color: $color-secondary;
   border: solid 2px $color-secondary;
   cursor: pointer;
-}
+}*/
 
-@media screen and (min-width: 992px) {
+@media (hover: hover) {
   .btn:hover {
     color: $color-secondary;
     border: solid 2px $color-secondary;
