--- a/layout/_about.scss
+++ b/layout/_about.scss
@@ -28,9 +28,4 @@
   .about__grid-container {
     padding: 125px 10% 100px 10%;
   }
-
-  .about__img-container {
-    //margin-top: 20%;
-    padding: 0 5%;
-  }
 }
