--- a/layout/_navigation.scss
+++ b/layout/_navigation.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100px;
   position: absolute;
+  z-index: 1;
 
   &__links-container {
     width: 100%;
